--- a/.github/workflows/master_app-dupont-1.yml
+++ b/.github/workflows/master_app-dupont-1.yml
@@ -6,7 +6,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - app-dupont-1
 on:
   push:
     branches:
-      - master
+      - nikos
   workflow_dispatch:
 
 jobs:
@@ -23,7 +23,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ././src-frontend/*.csproj --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
