--- a/.github/workflows/build-functions.yml
+++ b/.github/workflows/build-functions.yml
@@ -25,12 +25,13 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
+          
 
       - name: 'Resolve Project Dependencies Using Dotnet'
         shell: bash
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          dotnet build --configuration Release --output ./output
+          dotnet build ././src-functions/*.csproj --configuration Release --output ./output
           popd
       
       - name: 'Run Azure Functions Action'
