Establish connection to storage account and test upload functionality

--- a/src-frontend/src-frontend.csproj
+++ b/src-frontend/src-frontend.csproj
@@ -8,4 +8,8 @@
     <AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
+  </ItemGroup>
+
 </Project>
